styles.css
* {
  margin: 0;
  background: transparent;
  text-align: center;
  font-family: "Poppins", sans-serif;
  font-style: normal;
}

html {
  height: 100%;
}

body {
  min-height: 100%;
  background:
    url(images/lines.png) no-repeat right 10% top 10%,
    url(images/polygon1.png) right 0% top 56px no-repeat,
    url(images/box1.png) 13.3px 184.2px no-repeat,
    url(images/polygon2.png) right 0 top 237.33px no-repeat,
    url(images/cylinder2.png) left 136.78px top 528.33px no-repeat,
    url(images/box2.png) left 0 top 510.22px no-repeat,
    url(images/cylinder1.png) left 322.56px top 668.69px no-repeat;
  background-size: contain, 62.96px, 28.45px, auto 150px, auto 16.27px, auto 79.49px, auto 38.49px;
}

header {
  display: flex;
  position: fixed;
  z-index: 2;
  left: 0;
  top: 0;
  width: 100%;
}

header a {
  text-decoration: none;
  width: 90px;
  height: 28px;
  font-weight: 600;
  font-size: 20px;
  line-height: 28px;
  position: absolute;
  left: 24px;
  top: 10px;
  color: #28352f;
}

header nav {
  position: absolute;
  top: 16px;
  right: 28px;
  color: #28352f;
  cursor: pointer;
  z-index: 2;
}

header ul li a {
  all: unset;
  cursor: pointer;
  height: 24px;
  font-weight: 600;
  font-size: 32px;
  line-height: 44px;
  color: #3a4a42;
}

header ul {
  display: none;
  flex-direction: column;
  align-items: flex-start;
  gap: 40px;
  width: 100%;
  margin-left: 0;
  padding-top: 108px;
  height: 100vh;
  background-color: #fff;
  z-index: 1;
}

#navX {
  display: none;
}

.intro {
  display: flex;
  position: absolute;
  top: 112px;
  left: 24px;
  flex-direction: column;
}

.intro h1 {
  width: 100%;
  height: 192px;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  color: #172b4d;
}

.intro h1 span {
  display: block;
  color: #36b37e;
}

.intro p {
  width: 95%;
  height: 164px;
  margin-top: 58px;
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
}

#lines {
  display: block;
  position: absolute;
  top: 54.12px;
  left: 50%;
  transform: translate(-50%);
  background-color: transparent;
}

.icons {
  display: flex;
  position: absolute;
  top: 584px;
  left: 50%;
  transform: translate(-55%);
  height: 40px;
  width: 200px;
  justify-content: space-between;
  align-items: center;
}

.icons > * {
  background: transparent;
  height: 50%;
  width: 20px;
}

.action {
  position: absolute;
  top: 666px;
  left: 50%;
  transform: translate(-20%);
}

li {
  list-style-type: none;
}

#portfolio {
  display: grid;
  row-gap: 50px;
  grid-template-rows: 121px 474px 474px 474px;
  position: absolute;
  top: 728px;
  width: 100%;
}

.portfolio-item {
  display: flex;
  flex-direction: column;
  border-radius: 8px;
  background: #ebf0ee;
  border: 1px solid #d0d9d4;
  margin-left: 16px;
  margin-right: 30px;
}

.portfolio-item img {
  height: 252px;
}

.portfolio-item .portfolio-main {
  background: #ffff;
  border-radius: 8px;
  padding-top: 16px;
  padding-bottom: 34px;
}

#detailCont {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 3500px;
  z-index: 4;
  background-color: rgba(193, 199, 208, 0.9);
}

#portfolio-details {
  display: none;
  z-index: 7;
  position: absolute;
  left: 50%;
  transform: translate(-50%);
  flex-direction: column;
  width: 92%;
  background-color: #fff;
  align-items: center;
  justify-content: center;
  border-radius: 25px;
  padding-top: 16px;
}

#portfolio-details img {
  width: 83%;
  height: 220px;
}

#portfolio-details h1 {
  width: 259px;
  height: 135px;
  text-indent: 10px;
  font-style: normal;
  font-weight: 600;
  font-size: 32px;
  line-height: 44px;
  color: #172b4d;
  align-self: flex-start;
}

#portfolio-details ul {
  display: flex;
  height: 32px;
  margin: 12px 80px 12px -40px;
}

.about-item ul li {
  align-items: center;
  height: 40px;
  background: #fff;
  border-radius: 8px;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.03em;
  color: #36b37e;
  padding: 12px;
}

.portfolio-item .portfolio-main ul li {
  padding: 8px 12px;
  margin: 0 4px;
  border-radius: 4px;
  background: #ebf0ee;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.03em;
  color: #3a4a42;
}

#portfolio-details ul li {
  padding: 8px 12px;
  margin: 0 4px;
  border-radius: 4px;
  background: #ebf0ee;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.03em;
  color: #3a4a42;
}

#portfolio-details p {
  width: 311px;
  height: 313px;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #344563;
}

#portfolio-details .buttons {
  display: flex;
  gap: 12px;
  margin-bottom: 20px;
}

.portfolio-item .portfolio-main button {
  padding: 12px;
  width: 122px;
  height: 48px;
  background: #36b37f;
  border-radius: 4px;
  color: #fff;
  border: none;
}

.portfolio-main button:hover {
  background-color: #1e488f;
}

#portfolio-details button {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 12px;
  width: 122px;
  height: 48px;
  background: #36b37f;
  border-radius: 4px;
  color: #fff;
  border: none;
}

#portfolio-details #detailX {
  display: block;
  position: absolute;
  top: 4%;
  right: 13%;
}

#portfolio h2 {
  display: block;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  color: #172b4d;
}

#portfolio h2 #underline {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  width: 48px;
  margin-top: 24px;
  border-bottom: 4px solid #36b37e;
  border-radius: 24px;
}

#about {
  display: grid;
  grid-template-rows: 333px;
  row-gap: 50px;
  width: 100%;
  text-align: center;
  align-items: center;
  position: absolute;
  top: 4068px;
}

#about-heading {
  display: flex;
  flex-direction: column;
  width: 100%;
  text-align: center;
  align-items: center;
  background: url(images/about-bg1.png) right 0% top -50px no-repeat, url(images/about-bg2.png) left 0% bottom 0% no-repeat;
  background-size: 68px, 70.44px;
}
/* ... */

